[project]
name = "gst-recon-env"
version = "1.0.0"
description = "GST Reconciliation OpenEnv environment"
requires-python = ">=3.11"
dependencies = [
    "openenv-core>=0.2.0",
    "fastapi==0.109.2",
    "uvicorn[standard]==0.27.0",
    "pydantic==2.6.4",
    "pydantic-core==2.16.3",
    "Faker==22.6.0",
    "requests==2.31.0",
    "python-dotenv==1.0.1",
    "typing_extensions>=4.10.0",
    "openai>=2.7.2",
    "httpx>=0.27.0",
]

[project.scripts]
server = "gst_env.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gst_env"]